# montage

./: .env.example  .gitignore  README.md  dev.sh  pyproject.toml
.claude/: CLAUDE.md  settings.json
config/: api_costs.json  rate_limits.json
dashboard/: middleware.ts  package-lock.json  package.json
scripts/: apply_sfx_to_clips.py  backfill_video_prompts.py  batch_render_audio.py  calibrate_kling.py  checkpoint.py  copy_clips_to_remotion.py  dashboard_sync.py  edl_generator.py  feedback_capture.py  gate_runner.py  generate_scene_manifest.py  generate_voiceover_segments.py  generate_voiceover_v4.py  image_sync.py  job_listener.py  job_poller.py  kling_audio_compliance.py  kling_regen_v2_34.py  manifest_sync.py  merge_voiceover.py  merge_whisper.py  orchestrator.py  post_production.py  preflight_check.py  prompt_rewriter.py  reapply_sfx_single.py  regenerate_scene.py  sync_clips_to_dashboard.py  transcribe_segments.py  validate_skills.py  workflow_manifest.py
tests/: conftest.py  test_audio_presets.py  test_batch_add_sound.py  test_bookend_sync.py  test_checkpoint.py  test_compliance_gate.py  test_dashboard_analytics.py  test_dashboard_sync.py  test_edl_generator.py  test_format_templates.py  test_gates.py  test_integration_proxy.py  test_kling_audio.py  test_kling_audio_compliance.py  test_kling_client.py  test_manifest_resume.py  test_merge_voiceover.py  test_merge_whisper.py  test_orchestrator_gates.py  test_parity_check.py  test_pipeline_sync_integration.py  test_post_production.py  test_preflight_check.py  test_prompt_hash.py  test_realtime_pipeline.py  (+7 more)
(+115 files in other folders)
